Move store pkg into db pkg
