# pkg/api/api.yml
@@ -31,7 +31,7 @@ paths:
       parameters:
         - name: id
           in: path
-          description: Comic ID
+          description: User ID
           required: true
           schema:
             type: string
@@ -71,38 +71,38 @@ paths:
                   $ref: "#/components/schemas/Comic"
         "404":
           description: User not found
-    post:
-      operationId: SubscribeComic
-      description: User subscribe to new comic
-      tags:
-        - comic
-      parameters:
-        - name: id
-          in: path
-          description: User App ID, different with User Page Scope ID
-          required: true
-          schema:
-            type: string
-      requestBody:
-        description: "Comic link"
-        content:
-          text/plain:
-            schema:
-              type: string
-              example: https://beeng.net/truyen-tranh-online/toi-thang-cap-mot-minh-ss2-33790
-      responses:
-        "200":
-          description: Successfully subscribed to a comic
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Comic"
-        "404":
-          description: User not found
-        "401":
-          description: User unauthorized
-        "500":
-          description: Internal error
+    # post:
+    #   operationId: SubscribeComic
+    #   description: User subscribe to new comic
+    #   tags:
+    #     - comic
+    #   parameters:
+    #     - name: id
+    #       in: path
+    #       description: User App ID, different with User Page Scope ID
+    #       required: true
+    #       schema:
+    #         type: string
+    #   requestBody:
+    #     description: "Comic link"
+    #     content:
+    #       text/plain:
+    #         schema:
+    #           type: string
+    #           example: https://beeng.net/truyen-tranh-online/toi-thang-cap-mot-minh-ss2-33790
+    #   responses:
+    #     "200":
+    #       description: Successfully subscribed to a comic
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: "#/components/schemas/Comic"
+    #     "404":
+    #       description: User not found
+    #     "401":
+    #       description: User unauthorized
+    #     "500":
+    #       description: Internal error
   /users/{user_id}/comics/{id}:
     delete:
       description: Unsubscribe comic
@@ -134,6 +134,9 @@ paths:
       operationId: Comics
       tags:
         - comic
+      parameters:
+        - $ref: "#/components/parameters/offset"
+        - $ref: "#/components/parameters/limit"
       responses:
         "200":
           description: Successfully return a list of comics
